Fixed the overflow issue on mobile

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -58,6 +58,7 @@ section {
 }
 
 #loading, #card {
+  position: absolute;
   overflow: hidden;
 }
 
